--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,7 +52,9 @@ body {
   font-weight:900 ;
   
 }
-@media only screen and (min-width: 768px) and (max-width: 991px) {
+
+
+@media only screen and (min-width: 768px) and (max-width: 990px) {
   .content h2{
     font-size: 30px;
     text-align:center;
@@ -72,15 +74,15 @@ body {
   }
 }
 
-@media (max-width: 767px) {
+@media only screen and (max-width: 767px) {
   .content h2{
-    font-size: 25px;
+    font-size: 30px;
     text-align: center;
    
     /* align-items: center;
     justify-content: center; */
     /* font-weight: 600; */
-    margin-left: 0px;
+    margin-left: 110px;
     margin-top: -200px;
  
     width:100vw ;
@@ -97,18 +99,60 @@ body {
  @media only screen and (min-width: 768px) and (max-width: 991px) {
 .container article marquee{
   display: none;
+}}
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+body{
+  overflow: hidden;
+  max-width: 100%;
 }
 
   }
 
-  @media only screen and (min-width:767) {
+  @media only screen and (max-width:1200px) {
     .container article marquee{
       display: none;
       visibility: hidden;
     }
+    body{
+      overflow-x: hidden;
+    }
+   
     
       }
 
+      @media only screen and (max-width:1100px){
+        .container section{
+          display: none;
+        }
+        .main-btn{
+          margin-top: -100px;
+        }
+       
+      }
+
+      @media only screen and (max-width:1099px){
+        .welcome >h3{
+          text-align: center;
+          font-size: 25px;
+          display:b;
+          /* max-width: 100%; */
+        }
+  
+        .welcome >p{
+          text-align: center;
+          font-size: 20px;
+          width: 100%;
+        }
+  
+      }
+@media only screen and (min-width:1099px){
+  .welcome{
+    display: none;
+  }
+}
+     
+
+     
 /* #home{
 
 } */
@@ -190,9 +234,10 @@ body {
   box-sizing: border-box;
 }
 
-/* img {
+img {
   max-width: 100%;
-} */
+  height: 100vh;
+}
 
 a:focus,
 input:focus,
